fix: plate img is aligned with scale

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -169,7 +169,7 @@ p , h1, h2, h3, h4, h5{
 .plate-image {
   display: inline-block;
   width: 42px;
-  margin-left: 20px;
+  margin-left: 10px;
 }
 
 .no-padding {
